--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 # SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+# Emails
+alkemy.icons.email.sender=diego.martinez.giardini@gmail.com
